--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>GRAMMER 1</h2>
             <h4>د.محمد القاسم</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -29,7 +29,7 @@
             <h4>09:00 - 10:00</h4>
             <h2>النشر على الإنترنت</h2>
             <h4>د.محمد الخميس</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
