--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>التقنيات الناشئة</h2>
             <h4>د.أويس إسماعيل</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -45,7 +45,7 @@
             <h4>09:00 - 10:00</h4>
             <h2>أساسيات الحاسب والإنترنت</h2>
             <h4>د. وفاء سعيد</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -53,7 +53,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>تنسيق العمل الجماعي أونلاين</h2>
             <h4>د.تامر الذيب</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -61,7 +61,7 @@
             <h4>09:00 - 10:00</h4>
             <h2>أساسيات تطبيقات أوفيس</h2>
             <h4>د.محمد خميس</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -69,7 +69,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>Reading English</h2>
             <h4>د.زهراء ياسين</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -77,7 +77,7 @@
             <h4>09:00 - 10:00</h4>
             <h2>أساسيات تطبيقات أوفيس</h2>
             <h4>م. براءة الشيب م. محمد غلام</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -85,7 +85,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>English Conversition</h2>
             <h4>أ. زهراء ياسر</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -93,7 +93,7 @@
             <h4>08:30 - 09:300</h4>
             <h2>التكنولوجيا والتعلم الإلكتروني</h2>
             <h4>د.أمجد عبد ربه</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6514102760?pwd=RkJhMThDaUFUZ3dPNlB6Z2F">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -101,7 +101,7 @@
             <h4>07:00 - 08:00</h4>
             <h2>Translation Principles</h2>
             <h4>د.تامر الذيب</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
@@ -109,7 +109,7 @@
             <h4>08:30 - 10:00</h4>
             <h2>مبادئ الكمبيوتر: الشبكات</h2>
             <h4>د.محمد خميس</h4>
-            <a class="link-zoom" href="3">رابط القاعة <i class="bi bi-camera-video"></i></a>
+            <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
 
     </div>
