--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="subject">
             <i class="fa-solid fa-bookmark"></i>
             <h3>السبت</h3>
@@ -112,7 +112,119 @@
             <a class="link-zoom" href="https://us06web.zoom.us/j/6324447780?pwd=cnVNR1MzTDhsOVAveUZPbnhkcTNFQT09">رابط القاعة <i class="bi bi-camera-video"></i></a>
         </div>
 
+    </div> -->
+    <div class="navbar">
+        <ul>
+            <li><a href="#">
+                <i class="bi bi-box-seam"></i>
+                <p>جدولي</p>
+            </a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
+        </ul>
     </div>
+    <div class="courses">
+        <div class="header">
+            <i class="bi bi-flower1"></i>
+            <h5>قال عليه الصلاة والسلام</h5>
+            <h1>من يردالله به خيرا بفقه في الدين</h1>
+        </div>
+        <div class="container">
+            <div class="course">
+                <div class="time">
+                    <h5>السبت</h5>
+                    <i class="bi bi-clock-history"></i>
+                    <h5>07:00</h5> 
+                </div>
+                <div class="title">
+                    <h2>GRAMMER</h2>
+                    <div class="teacher">
+                        <i class="bi bi-person"></i>
+                        <p>د.محمد القاسم</p>
+                    </div>
+                </div>
+                <div class="link-zoom">
+                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <p>جاري الآن</p>
+                </div>
+            </div>
+            <div class="course">
+                <div class="time">
+                    <h5>السبت</h5>
+                    <i class="bi bi-clock-history"></i>
+                    <h5>07:00</h5> 
+                </div>
+                <div class="title">
+                    <h2>GRAMMER</h2>
+                    <div class="teacher">
+                        <i class="bi bi-person"></i>
+                        <p>د.محمد القاسم</p>
+                    </div>
+                </div>
+                <div class="link-zoom">
+                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <p>جاري الآن</p>
+                </div>
+            </div>
+            <div class="course">
+                <div class="time">
+                    <h5>السبت</h5>
+                    <i class="bi bi-clock-history"></i>
+                    <h5>07:00</h5> 
+                </div>
+                <div class="title">
+                    <h2>GRAMMER</h2>
+                    <div class="teacher">
+                        <i class="bi bi-person"></i>
+                        <p>د.محمد القاسم</p>
+                    </div>
+                </div>
+                <div class="link-zoom">
+                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <p>جاري الآن</p>
+                </div>
+            </div>
+            <div class="course">
+                <div class="time">
+                    <h5>السبت</h5>
+                    <i class="bi bi-clock-history"></i>
+                    <h5>07:00</h5> 
+                </div>
+                <div class="title">
+                    <h2>GRAMMER</h2>
+                    <div class="teacher">
+                        <i class="bi bi-person"></i>
+                        <p>د.محمد القاسم</p>
+                    </div>
+                </div>
+                <div class="link-zoom">
+                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <p>جاري الآن</p>
+                </div>
+            </div>
+            <div class="course">
+                <div class="time">
+                    <h5>السبت</h5>
+                    <i class="bi bi-clock-history"></i>
+                    <h5>07:00</h5> 
+                </div>
+                <div class="title">
+                    <h2>GRAMMER</h2>
+                    <div class="teacher">
+                        <i class="bi bi-person"></i>
+                        <p>د.محمد القاسم</p>
+                    </div>
+                </div>
+                <div class="link-zoom">
+                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <p>جاري الآن</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     <script src="js/all.min.js"></script>
 </body>
