--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                     </div>
                 </div>
                 <div class="link-zoom">
-                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <a href="#">
+                        <i class="bi bi-camera-video"></i>
+                        <p>رابط القاعة</p></a>
                     <p>جاري الآن</p>
                 </div>
             </div>
@@ -164,7 +166,10 @@
                     </div>
                 </div>
                 <div class="link-zoom">
-                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <a href="#">
+                        <i class="bi bi-camera-video"></i>
+                        <p>رابط القاعة</p>
+                    </a>
                     <p>جاري الآن</p>
                 </div>
             </div>
@@ -182,7 +187,10 @@
                     </div>
                 </div>
                 <div class="link-zoom">
-                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <a href="#">
+                        <i class="bi bi-camera-video"></i>
+                        <p>رابط القاعة</p>
+                    </a>
                     <p>جاري الآن</p>
                 </div>
             </div>
@@ -200,7 +208,9 @@
                     </div>
                 </div>
                 <div class="link-zoom">
-                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <a href="#">
+                        <i class="bi bi-camera-video"></i>
+                    <p>رابط القاعة</p></a>
                     <p>جاري الآن</p>
                 </div>
             </div>
@@ -218,7 +228,10 @@
                     </div>
                 </div>
                 <div class="link-zoom">
-                    <a href="#"><i class="bi bi-camera-video"></i></a>
+                    <a href="#">
+                        <i class="bi bi-camera-video"></i>
+                        <p>رابط القاعة</p>
+                    </a>
                     <p>جاري الآن</p>
                 </div>
             </div>
