--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
     <div class="courses">
         <div class="header">
             <i class="bi bi-flower1"></i>
-            <h5>قال عليه الصلاة والسلام</h5>
+            <div class="container">
+                <h5>قال عليه الصلاة والسلام</h5>
             <h1>من يردالله به خيرا بفقه في الدين</h1>
+            </div>
         </div>
         <div class="container">
             <div class="course">
