--- a/index.html
+++ b/index.html
@@ -119,10 +119,19 @@
                 <i class="bi bi-box-seam"></i>
                 <p>جدولي</p>
             </a></li>
-            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
-            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
-            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
-            <li><a href="#"><i class="bi bi-box-seam"></i></a></li>
+            <li><a href="#">
+                <i class="bi bi-box-seam"></i>
+                <p>واجباتي</p>
+            </a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i>
+                <p>دوراتي</p>
+            </a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i>
+                <p>المواد</p>
+            </a></li>
+            <li><a href="#"><i class="bi bi-box-seam"></i>
+                <p>كلية</p>
+            </a></li>
         </ul>
     </div>
     <div class="courses">
